Fix Elipses issue and Blog Section Title Spacing.

--- a/wp-content/themes/passion-lms/css/main.css
+++ b/wp-content/themes/passion-lms/css/main.css
@@ -37,8 +37,8 @@ div p, div em {
   margin-bottom: 20px;
 }
 
-.margin-btm-neg-20 {
-  margin-bottom: -20px;
+.margin-btm-neg-10 {
+  margin-bottom: -10px;
 }
 
 .btn.btn-bw {
